<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:divider="@drawable/bg_common_divider"
    android:showDividers="middle"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_dp_80"
        android:background="@color/color_bg_gray">

            <TextView
                android:id="@+id/tv_last_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_ins_updown"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:textSize="@dimen/abc_sp_28"
                android:gravity="center_vertical"
                tools:text="2815.66"
                />
        <TextView
            android:id="@+id/tv_ins_updown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_last_price"
            app:layout_constraintLeft_toRightOf="@id/tv_last_price"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textSize="@dimen/abc_sp_13"
            android:layout_marginLeft="@dimen/abc_dp_10"
            tools:text="+7.00"
            />
        <TextView
            android:id="@+id/tv_ins_updown_ratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_last_price"
            app:layout_constraintLeft_toLeftOf="@id/tv_ins_updown"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textSize="@dimen/abc_sp_13"
            tools:text="+7.00"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_dp_20"
        android:divider="@drawable/bg_common_divider"
        android:showDividers="middle"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/abc_dp_10"
                android:text="@string/quote_tv_buy_side"
                />
            <TextView
                android:id="@+id/tv_bid_price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                tools:text="12345.123"
                android:paddingLeft="@dimen/abc_dp_10"
                />
            <TextView
                android:id="@+id/tv_bid_vol"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingRight="@dimen/abc_dp_8"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                tools:text="60"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/abc_dp_10"
                android:text="@string/quote_tv_sell_side"
                />
            <TextView
                android:id="@+id/tv_ask_price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/abc_dp_10"
                android:layout_height="match_parent"
                tools:text="12345"
                />
            <TextView
                android:id="@+id/tv_ask_vol"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:paddingRight="@dimen/abc_dp_10"
                tools:text="60"
                />
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_charts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_dp_25"
        app:tabIndicator="@color/colorAccent"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorHeight="@dimen/abc_dp_3"
        app:tabIndicatorFullWidth="false"
        />
    <com.fsh.common.widget.ScrollableViewPager
        android:id="@+id/charts_container"
        android:layout_width="match_parent"
        app:scrollable="false"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_dp_90"
        >
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guide_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3333"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guide_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6666"
            />

        <TextView
            android:id="@+id/tv_m_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_m_low"
            android:text="@string/quote_quote_high"
            android:layout_marginLeft="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_m_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_m_high"
            app:layout_constraintBottom_toTopOf="@+id/tv_m_vol"
            android:text="@string/quote_quote_low"
            android:layout_marginLeft="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_m_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_m_low"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/quote_quote_vol"
            android:layout_marginLeft="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/bottom_guide_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_low"
            tools:text="4000"
            android:textSize="@dimen/abc_sp_10"
            android:layout_marginRight="@dimen/abc_dp_10"
            />

        <TextView
            android:id="@+id/tv_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/bottom_guide_1"
            app:layout_constraintTop_toBottomOf="@id/tv_high"
            app:layout_constraintBottom_toTopOf="@+id/tv_vol"
            tools:text="200"
            android:layout_marginRight="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/bottom_guide_1"
            app:layout_constraintTop_toBottomOf="@id/tv_low"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="10w"
            android:layout_marginRight="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />
        <!-- 第一例结束 -->

        <TextView
            android:id="@+id/tv_m_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/bottom_guide_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_m_pre_close"
            android:text="@string/quote_quote_open"
            android:layout_marginLeft="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_m_pre_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/bottom_guide_1"
            app:layout_constraintTop_toBottomOf="@id/tv_m_open"
            app:layout_constraintBottom_toTopOf="@+id/tv_m_pre_settlement"
            android:text="@string/quote_quote_pre_close"
            android:layout_marginLeft="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_m_pre_settlement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/bottom_guide_1"
            app:layout_constraintTop_toBottomOf="@id/tv_m_pre_close"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/quote_quote_pre_settlement"
            android:layout_marginLeft="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/bottom_guide_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_pre_close"
            tools:text="1000"
            android:layout_marginRight="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_pre_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/bottom_guide_2"
            app:layout_constraintTop_toBottomOf="@id/tv_open"
            app:layout_constraintBottom_toTopOf="@+id/tv_pre_settlement"
            tools:text="199"
            android:layout_marginRight="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_pre_settlement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/bottom_guide_2"
            app:layout_constraintTop_toBottomOf="@id/tv_pre_close"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="198"
            android:layout_marginRight="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />
        <!-- 第二列结束 -->

        <TextView
            android:id="@+id/tv_m_price_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/bottom_guide_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_m_pos_vol"
            android:text="@string/quote_quote_price_avg"
            android:layout_marginLeft="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_m_pos_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/bottom_guide_2"
            app:layout_constraintTop_toBottomOf="@id/tv_m_open"
            app:layout_constraintBottom_toTopOf="@+id/tv_m_oi"
            android:text="@string/quote_quote_pos_vol"
            android:layout_marginLeft="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_m_oi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/bottom_guide_2"
            app:layout_constraintTop_toBottomOf="@id/tv_m_pos_vol"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/quote_quote_oi"
            android:layout_marginLeft="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_price_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_pos_vol"
            tools:text="1000"
            android:layout_marginRight="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_pos_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price_avg"
            app:layout_constraintBottom_toTopOf="@+id/tv_m_oi"
            tools:text="199"
            android:layout_marginRight="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />

        <TextView
            android:id="@+id/tv_oi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pos_vol"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="198"
            android:layout_marginRight="@dimen/abc_dp_10"
            android:textSize="@dimen/abc_sp_10"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>